# pico-8x8-life

./: CMakeLists.txt  README.md  display.h  lfsr.c  lfsr.h  life.c  life.h  main.c  test.c  upload.sh
hardware/: PixelArray.fzz
software/: .clangd  CMakeLists.txt  README.md  upload.sh
software/src/: README.md  display.c  display.h  lfsr.c  lfsr.h  life.c  life.h  main.c
software/test/: lfsr.test.c  life.test.c
src/: display.c  lfsr.c  lfsr.h  life.c  life.h  main.c
test/: lfsr.test.c  life.test.c
